--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,15 @@ dependencies:
 
   # Etc
   slang: ^3.31.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.11
 
 flutter:
   uses-material-design: true
