--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Etc
   slang: ^3.31.1
   http: ^1.2.1
+  fl_location: ^3.1.0
+  # location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
