Change Result type to TaskResult

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   slang: ^3.31.1
   http: ^1.2.1
   fl_location: ^3.1.0
+  freezed_annotation: ^2.4.3
   # location: ^6.0.2
 
 dev_dependencies:
@@ -45,6 +46,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   mockito: ^5.4.4
   build_runner: ^2.4.11
+  freezed: ^2.5.2
 
 flutter:
   uses-material-design: true
