--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,12 @@ dependencies:
   # Etc
   slang: ^3.31.1
   fl_location: ^3.1.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^3.0.0
-  mockito: ^5.4.4
   build_runner: ^2.4.11
   freezed: ^2.5.2
 
