--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,6 @@ dependencies:
   fpdart: ^1.1.0
   get_it: ^7.7.0
   flutter_dotenv: ^5.1.0
-  flutter_redux: ^0.10.0
-  redux: ^5.0.0
   freezed_annotation: ^2.4.3
 
   #  Network
@@ -38,6 +36,10 @@ dependencies:
   slang: ^3.31.1
   fl_location: ^3.1.0
   mocktail: ^1.0.4
+  js: ^0.7.1
+  flutter_hooks: ^0.20.5
+  async_redux: ^23.1.1
+  flutter_hooks_async_redux: ^2.0.0
 
 dev_dependencies:
   flutter_test:
